unpackaged/main/default/objects/Contract_Hours__c/Contract_Hours__c.object-meta.xml
<CustomObject>
    <label>Contractor Hours</label>
    <nameField>
        <displayFormat>CH-{000000}</displayFormat>
        <label>Contractor Hours Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contractor Hours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>