unpackaged/main/default/objects/Contract_Hours__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>