unpackaged/main/default/objects/Contract_Hours__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contractor__c</columns>
    <columns>Headcount__c</columns>
    <columns>Hours__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>