unpackaged/main/default/objects/Contract_Hours__c/listViews/My_Contractor_Hours.listView-meta.xml
<ListView>
    <fullName>My_Contractor_Hours</fullName>
    <columns>NAME</columns>
    <columns>Contractor__c</columns>
    <columns>Headcount__c</columns>
    <columns>Hours__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Contractor Hours</label>
</ListView>